--- a/MicroPass/MainWindow.xaml
+++ b/MicroPass/MainWindow.xaml
@@ -18,7 +18,8 @@
 
         <TextBox x:Name="passwordBox" Margin="203,0,10,35" TextWrapping="Wrap" Text="&lt;Password&gt;" Background="#FFE7F9E7" Height="85" VerticalAlignment="Bottom"/>
         <Label Content="Saved Password" HorizontalAlignment="Left" Margin="203,0,0,120" Height="26" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="accountFilterBox" Margin="105,42,73,0" TextWrapping="Wrap" Text="" Height="22" VerticalAlignment="Top" Background="#9999F9E7" TextChanged="AccountFilterBox_TextChanged"/>
+        <TextBox x:Name="accountFilterBox" Margin="105,42,0,0" TextWrapping="Wrap" Text="" Height="22" VerticalAlignment="Top" Background="#9999F9E7" TextChanged="AccountFilterBox_TextChanged" HorizontalAlignment="Left" Width="175"/>
+        <Button x:Name="settingsButton" Content="Settings ⚙" HorizontalAlignment="Left" Margin="205,69,0,0" VerticalAlignment="Top" Width="75" Click="SettingsButton_Click"/>
 
     </Grid>
 </Window>
